! IconExtensions class:
  ! SaveHighQuality method has been renamed to SaveAsIcon to match with its ImageExtensions counterpart.
  ! ToMultiResBitmap methods: They don't return compressed results on any platforms anymore because PNG compressed
    sub-images could cause problems even on Windows systems. The overload with the forceUncompressedResult parameter
    is now obsolete.
  - ExtractIcon and ExtractBitmap overloads: Requested icon size did not work for larger than 256x256 icon sizes or
    PNG compressed icons smaller than 256x256 pixels.
  - ExtractIcon: It could return null if the requested icon was not supported (just like ExtractNearestIcon) though
    according to the documentation this method should throw PlatformNotSupportedExteption in such cases.
- ImageExtensions class:
  - Fixing SaveAsTiff if currentFrameOnly = false and image contains non-icon images.
+ The PixelFormatExtensions class has been made public along with some methods:
  + ToBitsPerPixel
  + IsIndexed
  + IsValidFormat
  + IsSupported

- KGySoft.Drawing.Imaging namespace:
====================================
- Palette class: Fixing a possible issue in default caching logic for concurrent access.


~~~~~~~~~
! v5.0.0:
~~~~~~~~~

! Assembly changes:
===================
! Referencing KGySoft.CoreLibraries 5.0.1
+ Targeting also .NET Core 2.0.
+ Targeting also .NET Core 3.0.

+ KGySoft.Drawing.Imaging namespace:
====================================
A New namespace for fast and direct Bitmap pixel manipulation in a type-safe and managed way.
Additionally, provides types for quantizing and dithering.
The new public types in this namespace:
+ IBitmapData interface
+ IReadableBitmapData interface
+ IWritableBitmapData interface
+ IReadWriteBitmapData interface
+ IBitmapDataRow interface
+ IReadableBitmapDataRow interface
+ IWritableBitmapDataRow interface
+ IReadWriteBitmapDataRow interface
+ IDitherer interface
+ IDitheringSession interface
+ IQuantizer interface